# vc-auto-poster

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  sample.vc-auto-poster.toml
src/vc_autoposter/: __init__.py  __main__.py  config.py  poster.py  votecount.py
