[project]
name = "vc-auto-poster"
authors = [{ name = "notblackorwhite"}]
description = "Automatically post votecounters periodically."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "httpx",
    "pydiscourse",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["mypy"]
